Add new endpoint to batch query entity neighbors
